# Bad-Apple-Python-Module

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  test.sh  test1.sh  test_players.py
benchmarks/: fontmap_type.py  gray_resize_1st.py  msg.py  rgb24.py
src/badapple/: __init__.py  __main__.py  audio.py  base.py  builtin_files.py  color.py  frame2str.py  play.py  players.py  replay.py  util.py
