[project]
name = "badapple"
version = "0.0.4"
description = "play the video in the console as ASCII art"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["badapple", "asciiart"]

authors = [
  {name = "userElaina", email = "userelaina@pm.me" }
]
maintainers = [
  {name = "userElaina", email = "userelaina@pm.me" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "opencv-python",
  "anyplayer>=0.0.3"
]

[project.optional-dependencies]
simpleaudio = ["anyplayer[simpleaudio]>=0.0.3"]
pyaudio = ["anyplayer[pyaudio]>=0.0.3"]
playsound = ["anyplayer[playsound]>=0.0.3"]
pydub = ["anyplayer[pydub]>=0.0.3"]
dev = ["anyplayer[dev]>=0.0.3"]

[project.urls]
"Homepage" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module"
"Bug Reports" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module/issues"
"Source" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module"

[tool.setuptools]
package-data = {"badapple" = ["*.data", "badapple.*"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
