[project]
name = "badapple"
version = "0.0.7"
description = "play the video in the console as ASCII art"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["badapple", "asciiart"]

authors = [
  {name = "userElaina", email = "userelaina@pm.me" }
]
maintainers = [
  {name = "userElaina", email = "userelaina@pm.me" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "opencv-python",
]

[project.optional-dependencies]
audio = ["anyplayer>=0.0.5"]
anyplayer = ["anyplayer>=0.0.5"]
simpleaudio = ["anyplayer[simpleaudio]>=0.0.5"]
pyaudio = ["anyplayer[pyaudio]>=0.0.5"]
playsound = ["anyplayer[playsound]>=0.0.5"]
x256 = ["x256offline>=0.0.3"]
dev = ["anyplayer[dev]>=0.0.5", "x256offline>=0.0.3"]

[project.urls]
"Homepage" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module"
"Bug Reports" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module/issues"
"Source" = "https://github.com/bad-apple-lab/Bad-Apple-Python-Module"

[tool.setuptools]
package-data = {"badapple" = ["*.data", "badapple.*"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
